--- a/code/heterogeneity.rmd
+++ b/code/heterogeneity.rmd
@@ -19,24 +19,32 @@ library(metafor)
 library(dplyr)
 library(purrr)
 
+#this function is for transforming RRR8 which only has raw mean difference and SE to a standardized version
+transform_SE <- function(ES, SE, n1, n2){ #Based on meta-analysis lecture 02
+  sdpooled <- sqrt(SE^2 / (1 / n1 + 1/n2))
+  d <- ES / sdpooled
+  g <- (1 - 3 / (4*(n1 + n2) - 9))*d
+  v <- 1 / n1 + 1/ n2 + g^2 / (2*(n1 + n2))
+  data.frame(g = g, v = v)
+}
+
 est_heterogen_smd_raw <- function(x){
   if(any(x[, "outcomes1_2"] == "mean _ SD")){ #without the 'any' we will get warnings because we apply 'if' to a vector
     
     fit <- rma(measure = "SMD", m1i = outcome_t1, m2i = outcome_c1, sd1i = outcome_t2, sd2i = outcome_c2, #gives Hedge's g as outcome
                n1i = ntreatment, n2i = ncontrol,test = "knha", data = x) 
     
-    fit2 <- rma(measure = "MD", m1i = outcome_t1, m2i = outcome_c1, sd1i = outcome_t2, sd2i = outcome_c2, #gives Hedge's g as outcome
+    fit2 <- rma(measure = "MD", m1i = outcome_t1, m2i = outcome_c1, sd1i = outcome_t2, sd2i = outcome_c2, #gives raw outcome
                n1i = ntreatment, n2i = ncontrol,test = "knha", data = x) 
     
-  } else if(any(x[, "outcomes1_2"] == "mean _ SE")){  #this currently gives us the estimate for the raw effect, but with SE should be possible to back-transform to smd
+  } else if(any(x[, "outcomes1_2"] == "mean _ SE")){  
     
-    fit <- fit2 <-  rma(yi = effect_size, sei = outcome_c2, test = "knha",  data = x)
+    standardized <- transform_SE(x$effect_size, x$outcome_c2, x$ntreatment, x$ncontrol)
     
-    I2_1 <- rep(NA, 3)
-    I2_2 <- confint(fit2)$random[3, ]
-    #In this case, stop function and return dataframe below
-    return(data.frame(s_I2 = I2_1[1], s_ci.lb = I2_1[2], s_ci.ub = I2_1[3], r_I2 = I2_2[1], r_ci.lb = I2_2[2], r_ci.ub = I2_2[3])) #output is for smd, r, and 1 raw difference
-
+    fit <- rma(yi = g, vi = v, test = "knha", data = standardized) #standardized effect estimate
+    
+    fit2 <-  rma(yi = effect_size, sei = outcome_c2, test = "knha",  data = x) #raw effect estimate
+    
   } else if(any(x[, "effect_type"] == "r")){
     
     fit <- fit2 <- rma(measure = "COR", ri = effect_size, ni = Ntotal, test = "knha", data = x)
@@ -48,10 +56,10 @@ est_heterogen_smd_raw <- function(x){
     
   } else{ #for all two-group count effects
     
-    fit <- rma(measure = "OR2D", ai = outcome_t1, bi = outcome_t2, ci = outcome_c1, di = outcome_c2, #transformed to smd
+    fit <- rma(measure = "OR2D", ai = outcome_t1, bi = outcome_t2, ci = outcome_c1, di = outcome_c2, #standardized
                n1i = ntreatment, n2i = ncontrol, test = "knha", data = x)
     
-    fit2 <- rma(measure = "OR", ai = outcome_t1, bi = outcome_t2, ci = outcome_c1, di = outcome_c2, #transformed to smd
+    fit2 <- rma(measure = "RD", ai = outcome_t1, bi = outcome_t2, ci = outcome_c1, di = outcome_c2, #unstandardized
                n1i = ntreatment, n2i = ncontrol, test = "knha", data = x)
   }
   
@@ -60,6 +68,7 @@ est_heterogen_smd_raw <- function(x){
 
   data.frame(s_I2 = I2_1[1], s_ci.lb = I2_1[2], s_ci.ub = I2_1[3], r_I2 = I2_2[1], r_ci.lb = I2_2[2], r_ci.ub = I2_2[3]) #output is for smd, r, and 1 raw difference
 }
+
 
 
 res <- dat %>% 
@@ -86,4 +95,4 @@ het %>% knitr::kable("latex", booktabs = T, digits = 1, col.names = c("RS", "Eff
   add_header_above(c(" " = 2, "Standardized" = 3, "Unstandardized" = 3, " " = 1))
   
 ```
-**Note**: NA in unstandardized columns comes from correlations which I don't think is possible to calculate the unstandardized version for with the available information. RRR5 I have not yet been able to extract a measure of variance for, hence the NAs. RRR8 I only have the SE for the raw mean difference and have yet to figure out how use this to estimate a standardized effect.
+**Note**: I am uncertain if we can speak of standardized/unstandardized in regards to 2x2 tables? For now these correspond to OR/Risk difference for the following five effects {Allowed vs forbidden, gain vs. loss framing, norm of reciprocity, low vs. high category scale, verbal overshadowing}. NA in unstandardized columns comes from correlations which don't seem possible to calculate the unstandardized version for with the available information. RRR5 I have not yet been able to extract a measure of variance for, hence the NAs.
