--- a/code/tables.rmd
+++ b/code/tables.rmd
@@ -1,5 +1,5 @@
 ---
-title: "Heterogeneity in pregregistered multi-lab studies"
+title: "Tables"
 author: "Anton Ohlsson Collentine"
 output: pdf_document
 ---
@@ -8,16 +8,41 @@ output: pdf_document
 knitr::opts_chunk$set(echo = FALSE, message = FALSE, warning = FALSE)
 ```
 
-```{r load data}
+```{r load data and packages}
 library(readr)
+library(dplyr)
+library(kableExtra)
+library(purrr)
+library(metafor)
 
 dat <- read_csv("../data/collated_summary_data.csv")
 ```
 
-```{r metafor}
-library(metafor)
-library(dplyr)
-library(purrr)
+##Summary table
+```{r data-summary-table}
+#library(dplyr)
+#library(kableExtra)
+
+summary.table <- dat %>% 
+  group_by(rs) %>% 
+  summarize(Labs = n_distinct(Site),
+            Countries = n_distinct(country), 
+            Effects = n_distinct(effect),
+            Participants = if(Effects == 1){sum(Ntotal)}
+                           else{sum(Ntotal) / Effects}) %>% #average across effects
+  rename(Study = rs)
+
+summary.table %>% knitr::kable("latex", booktabs = T, digits = 0) %>% 
+  kable_styling() %>% 
+  footnote(threeparttable = TRUE,
+           general = "For studies with several effects the number of participants is the average across effects, rounded to the closest whole number. Participant numbers are those used for primary analyses by original authors (i.e., after exclusions).")
+  
+```
+
+```{r prep-heterogeneity-table}
+#library(metafor)
+#library(dplyr)
+#library(purrr)
 
 #this function is for transforming RRR8 which only has raw mean difference and SE to a standardized version
 transform_SE <- function(ES, SE, n1, n2){ #Based on meta-analysis lecture 02
@@ -65,21 +90,15 @@ est_heterogen_smd_raw <- function(x){
   data.frame(s_I2 = I2_1[1], s_ci.lb = I2_1[2], s_ci.ub = I2_1[3], r_I2 = I2_2[1], r_ci.lb = I2_2[2], r_ci.ub = I2_2[3]) #output is for smd, r, and 1 raw difference
 }
 
-#--------------
+#Apply function to data
 res <- dat %>% 
   filter(!rs == "RRR5") %>% #Remove RRR5 for now because have not been able to extract sufficient data for it
   split(.$effect) %>%  #separate by effect, necessary step otherwise the function is applied overall
   map_dfr(est_heterogen_smd_raw, .id = "effect") %>% #apply function, rbind results into dataframe ('dfr'), make sure purrr is up to date
   mutate(dif = s_I2 - r_I2) #Gives us the difference between the two
 
-clarify <- c("Allowed vs. forbidden", "Gain vs. loss framing", "Norm of reciprocity", "Low vs. high category scales")
+clarify <- c("Allowed vs. forbidden", "Gain vs. loss framing", "Norm of reciprocity", "Low vs. high category scales") #Effects reported as d in many labs 1 but meta-analyzed as OR
 
-#-----------TEST
-test <- dat %>% filter(effect == "IAT correlation math")
-fit <- rma(measure = "ZCOR", ri = effect_size, ni = Ntotal, test = "knha", data = test)
-fit2 <- rma(measure = "COR", ri = effect_size, ni = Ntotal, test = "knha", data = test)
-
-#---------
 #Add rs to the data-frame
 het <- dat %>% 
   select(rs, effect, effect_type) %>% 
@@ -97,15 +116,15 @@ het <- dat %>%
 
 ```
 
-```{r table}
+##Heterogeneity in preregistered multi-lab psychology studies
+```{r heterogeneity-table}
 library(kableExtra)
 het %>% knitr::kable("latex", booktabs = T, digits = 1, col.names = c("RS", "Effect", "Effect type", "I2(%)", "ci.lb", "ci.ub", "I2(%)", "ci.lb", "ci.ub", "Dif")) %>% 
   kable_styling() %>% 
-  add_header_above(c(" " = 3, "Standardized" = 3, "Unstandardized" = 3, " " = 1))
+  add_header_above(c(" " = 3, "Standardized" = 3, "Unstandardized" = 3, " " = 1)) #%>% 
+  # footnote(threeparttable = TRUE,
+           # general = "'OR / RD' indicates that the effect was meta-analyzed as odds ratio in 'standardized' columns and risk difference in 'unstandardized' columns. Out of these effects 'Verbal overshadowing' was meta-analyzed by original authors as risk difference and the others as odds ratios. For correlations the standardized version correspond to Fisher's r-to-z transformed correlation and unstandardized to raw correlations. All original authors used raw correlations in their meta-analyzes. For 'Mean diff.' the standardized version corresponds to Hedge's g and unstandardized to raw mean differences. Original authors used different approaches for mean differences. RRR5 I have not yet been able to extract a measure of variance for, hence the NAs. Effects were estimated in metafor using REML with the 'knha' correction.")
   
 ```
 **Note**: "OR / RD" indicates that the effect was meta-analyzed as odds ratio in 'standardized' columns and risk difference in 'unstandardized' columns. Out of these effects 'Verbal overshadowing' was meta-analyzed by original authors as risk difference and the others as odds ratios. For correlations the standardized version correspond to Fisher's r-to-z transformed correlation and unstandardized to raw correlations. All original authors used raw correlations in their meta-analyzes. For 'Mean diff.' the standardized version corresponds to Hedge's g and unstandardized to raw mean differences. Original authors used different approaches for mean differences. RRR5 I have not yet been able to extract a measure of variance for, hence the NAs. Effects were estimated in metafor using REML with the "knha" correction.
-
-For RRR8 the analysis includes data from all 40 laboratories, the preregistered RRR8 analysis only included 23 laboratories (the rest didn't collect enough male participants) - needs fixing.
-
 
