--- a/code/tables.rmd
+++ b/code/tables.rmd
@@ -33,10 +33,9 @@ summary.table <- dat %>%
   rename(Study = rs)
 
 summary.table %>% knitr::kable("latex", booktabs = T, digits = 0) %>% 
-  kable_styling() %>% 
+  kable_styling(position = "left") %>% 
   footnote(threeparttable = TRUE,
            general = "For studies with several effects the number of participants is the average across effects, rounded to the closest whole number. Participant numbers are those used for primary analyses by original authors (i.e., after exclusions).")
-  
 ```
 
 ```{r prep-heterogeneity-table}
@@ -77,7 +76,9 @@ est_heterogen_smd_raw <- function(x){
     I2_1 <- confint(fit)$random[3, ] #Gives us the I2 estimate and its confidence interval for standardized values
     I2_2 <- rep(NA, 3) #No unstandardized version
 
-    return(data.frame(s_I2 = I2_1[1], s_ci.lb = I2_1[2], s_ci.ub = I2_1[3], r_I2 = I2_2[1], r_ci.lb = I2_2[2],      r_ci.ub = I2_2[3]))
+    return(data.frame(eff_size = fit$b[[1]],
+                      s_I2 = I2_1[1], s_ci.lb = I2_1[2], s_ci.ub = I2_1[3], 
+                      r_I2 = I2_2[1], r_ci.lb = I2_2[2], r_ci.ub = I2_2[3]))
 
   } else{ #for all two-group count effects
     
@@ -91,12 +92,13 @@ est_heterogen_smd_raw <- function(x){
   I2_1 <- confint(fit)$random[3, ] #Gives us the I2 estimate and its confidence interval for standardized values
   I2_2 <- confint(fit2)$random[3, ] #Gives us the I2 estimate and CI for raw values
 
-  data.frame(s_I2 = I2_1[1], s_ci.lb = I2_1[2], s_ci.ub = I2_1[3], r_I2 = I2_2[1], r_ci.lb = I2_2[2], r_ci.ub = I2_2[3]) #output is for smd, r, and 1 raw difference
+  data.frame(eff_size = fit$b[[1]], #standardized effect (point estimate)
+             s_I2 = I2_1[1], s_ci.lb = I2_1[2], s_ci.ub = I2_1[3], #standardized I2 + CI
+             r_I2 = I2_2[1], r_ci.lb = I2_2[2], r_ci.ub = I2_2[3]) #unstandardized I2 + CI
 }
 
 #Apply function to data
 res <- dat %>% 
-  filter(!rs == "RRR5") %>% #Remove RRR5 for now because have not been able to extract sufficient data for it
   split(.$effect) %>%  #separate by effect, necessary step otherwise the function is applied overall
   map_dfr(est_heterogen_smd_raw, .id = "effect") %>% #apply function, rbind results into dataframe ('dfr'), make sure purrr is up to date
   mutate(dif = s_I2 - r_I2) #Gives us the difference between the two
@@ -115,20 +117,18 @@ het <- dat %>%
                               'Raw mean difference' = "Mean diff.",
                               'Risk difference' = "OR / RD"),
          effect_type = ifelse(effect %in% clarify, "OR / RD", effect_type)) %>% 
-  arrange(desc(s_I2)) #sort by rs and I2 for standardized effect
-
-
+  arrange(desc(s_I2)) #sort by I2 for standardized effect
 ```
 
 ##Heterogeneity in preregistered multi-lab psychology studies
 ```{r heterogeneity-table}
 library(kableExtra)
-het %>% knitr::kable("latex", booktabs = T, digits = 1, col.names = c("RS", "Effect", "Effect type", "I2(%)", "ci.lb", "ci.ub", "I2(%)", "ci.lb", "ci.ub", "Dif")) %>% 
-  kable_styling() %>% 
-  add_header_above(c(" " = 3, "Standardized" = 3, "Unstandardized" = 3, " " = 1)) #%>% 
-  # footnote(threeparttable = TRUE,
-           # general = "'OR / RD' indicates that the effect was meta-analyzed as odds ratio in 'standardized' columns and risk difference in 'unstandardized' columns. Out of these effects 'Verbal overshadowing' was meta-analyzed by original authors as risk difference and the others as odds ratios. For correlations the standardized version correspond to Fisher's r-to-z transformed correlation and unstandardized to raw correlations. All original authors used raw correlations in their meta-analyzes. For 'Mean diff.' the standardized version corresponds to Hedge's g and unstandardized to raw mean differences. Original authors used different approaches for mean differences. RRR5 I have not yet been able to extract a measure of variance for, hence the NAs. Effects were estimated in metafor using REML with the 'knha' correction.")
+het %>% knitr::kable("latex", booktabs = T, digits = 1, col.names = c("RS", "Effect", "Effect type", "Estimate", "I2(%)", "ci.lb", "ci.ub", "I2(%)", "ci.lb", "ci.ub", "Dif")) %>% 
+  kable_styling(latex_options = "scale_down") %>% 
+  add_header_above(c(" " = 4, "Standardized" = 3, "Unstandardized" = 3, " " = 1)) %>%
+  footnote(threeparttable = TRUE,
+           general = "'OR / RD' indicates that the effect was meta-analyzed as odds ratio in 'standardized' columns and risk difference in 'unstandardized' columns. Out of these effects 'Verbal overshadowing' was meta-analyzed by original authors as risk difference and the others as odds ratios. For correlations the standardized version correspond to raw correlations.  For 'Mean diff.' the standardized version corresponds to Hedge's g and unstandardized to raw mean differences. Original authors used different approaches for mean differences. RRR5 I have not yet been able to extract a measure of variance for, hence the NAs. Effects were estimated in metafor using REML with the 'knha' correction. Estimate column are point estimates of standardized effect sizes.") 
   
 ```
-**Note**: "OR / RD" indicates that the effect was meta-analyzed as odds ratio in 'standardized' columns and risk difference in 'unstandardized' columns. Out of these effects 'Verbal overshadowing' was meta-analyzed by original authors as risk difference and the others as odds ratios. For correlations the standardized version correspond to Fisher's r-to-z transformed correlation and unstandardized to raw correlations. All original authors used raw correlations in their meta-analyzes. For 'Mean diff.' the standardized version corresponds to Hedge's g and unstandardized to raw mean differences. Original authors used different approaches for mean differences. RRR5 I have not yet been able to extract a measure of variance for, hence the NAs. Effects were estimated in metafor using REML with the "knha" correction.
+
 
